--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^8.2.0",
+    "@react-native-firebase/auth": "^8.2.0",
+    "@react-native-firebase/firestore": "^7.4.3",
     "lodash": "^4.17.19",
     "react": "16.13.1",
     "react-native": "0.63.2"
